[workspace]

members = [
    "rust/cjdns_sys",
    "rust/cjdroute",
    "rust/publictoip6",
    "rust/mkpasswd",
    "rust/sybilsim",
    "rust/testcjdroute",
    "rust/randombytes",
    "rust/privatetopublic",
    "rust/makekeys",
]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
