[workspace]
resolver = "2"
members = [
    "rust/cjdns_sys",
    "rust/cjdnstool",
]

[profile.release]
opt-level = 2
panic = "unwind"

# In debug mode, enable optimizations for dependencies, but not for our code
[profile.dev.package."*"]
opt-level = 2

[workspace.dependencies]
cjdns = { git = "https://github.com/cjdelisle/cjdns-route-server", rev = "14a6f093334ea5e6bae571ef8100c3306a1ca8ec", version = "0.1.0" }
clap = { version = "4", features = ["derive"] }
const_format = "0.2"
data-encoding = "2"
lazy_static = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1.27", features = ["fs", "process", "net", "macros", "time", "rt-multi-thread", "sync"] }
hex = "0.4"
log = { version = "0.4", features = ["std", "release_max_level_trace"] }
parking_lot = "0.12"
thiserror = "1.0"
eyre = { version = "0.6.12" }
boringtun = { git = "https://github.com/cjdelisle/boringtun", rev = "f288b2f461e7322a278b63b1ddc4ab705b5b7462", version = "0.3", features = ["additional_data"] }
slog = { version = "2.7", features = ["release_max_level_trace"] }
pnet = { version = "0.35" }
once_cell = "1.9"
async-recursion = "1"
socket2 = "0"
libc = "0"
num_cpus = "1"
async-trait = "0.1"
env_logger = "0.11"
cc = "1.0"
cbindgen = { version = "0.16" }
bindgen = { version = "0.55" }
byteorder = "1.5"
trust-dns-resolver = "0.23.2"
ipnetwork = "0.20"
num_enum = "0.7"